# supply-chain-agents

./: .gitignore  CONTRIBUTING.md  README.md
.checkpoints/: DEMO-001_2026-01-01T13-39-27.381998.json  DEMO-001_2026-01-01T13-39-27.385728.json  DEMO-001_2026-01-01T13-39-27.389561.json  DEMO-001_2026-01-01T13-39-27.391608.json  DEMO-001_2026-01-01T13-39-27.393724.json  DEMO-001_2026-01-01T13-39-27.395749.json  DEMO-001_2026-01-01T13-39-27.397716.json  DEMO-001_2026-01-01T13-39-27.399686.json  (+134 more)
backend/: README.md  demo_completa.py  demo_simple.py  pyproject.toml
backend/src/agents/finance/: controller.py  ledger.py
backend/src/agents/inventory/: forecaster.py  optimizer.py
backend/src/agents/logistics/: router.py  tracker.py
backend/src/agents/procurement/: negotiator.py  supplier_risk.py
backend/src/agents/production/: scheduler.py
backend/src/agents/quality/: inspector.py  root_cause.py
backend/src/core/: config.py  container.py  event_bus.py  exceptions.py  graph.py  interfaces.py  llm_provider.py  logging.py  memory.py  state.py  utils.py
backend/src/repositories/: inventory_repository.py  part_repository.py  supplier_repository.py
backend/src/services/: alert_manager.py  location_optimizer.py  notification_service.py  performance_scoring.py
backend/src/simulation/: environment.py  generator.py
backend/tests/: verify_system.py
backend/tests/unit/: test_alert_manager.py  test_event_bus.py  test_exceptions.py  test_location_optimizer.py  test_performance_scoring.py  test_supplier_repository.py  test_utils.py
frontend/: index.html
(+4 files in other folders)
