[project]
name = "automotive-supply-chain-agents"
version = "0.1.0"
description = "An enterprise-grade autonomous supply chain management system using LangGraph."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Master Student", email = "student@university.edu"},
]
dependencies = [
    "langgraph>=0.0.10",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "pydantic>=2.5.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "networkx>=3.2.1",
    "matplotlib>=3.8.0",
    "scipy>=1.11.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
